add me.jpg in index.html

--- a/index_style.css
+++ b/index_style.css
@@ -59,3 +59,11 @@ html {
 	padding: 0 900px 0 0;
 	text-align: justify;
 }
+img {
+	position: relative;
+	border-radius: 50%;
+	left: 75%;
+	margin-top: -500px;
+	height: 350px;
+	box-shadow: 0px 0px 50px black;
+}
